objects/Quote/fields/Bill_to_Adddress__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Adddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill to Adddress</label>
    <referenceTo>Account_Adddress__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>