objects/Quote/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <formula>Opportunity.City_BillingAddress__c</formula>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>