objects/Quote/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <formula>Opportunity.Country_BillingAddress__c</formula>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>