objects/Quote/fields/Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>