objects/Quote/fields/Billing_State__c.field-meta.xml
<CustomField>
    <fullName>Billing_State__c</fullName>
    <formula>Opportunity.State_BillingAddress__c</formula>
    <label>Billing State</label>
    <type>Text</type>
</CustomField>