objects/Quote/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <formula>Opportunity.Street_Address_BillingAddress__c</formula>
    <label>Billing Street</label>
    <type>Text</type>
</CustomField>