objects/Quote/fields/Billing_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Zip_Code__c</fullName>
    <formula>Opportunity.ZIP_Code_BillingAddress__c</formula>
    <label>Billing Zip Code</label>
    <type>Text</type>
</CustomField>