objects/Quote/fields/Box_Quote_Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Box_Quote_Folder_Link__c</fullName>
    <label>Box Quote Folder Link</label>
    <type>Url</type>
</CustomField>