objects/Quote/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aeolus</fullName>
            </value>
            <value>
                <fullName>Hubtrac</fullName>
            </value>
            <value>
                <fullName>Pirelli</fullName>
            </value>
            <value>
                <fullName>Arisun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>