objects/Quote/fields/CHA_Service__c.field-meta.xml
<CustomField>
    <fullName>CHA_Service__c</fullName>
    <label>CHA Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Maestro</fullName>
            </value>
            <value>
                <fullName>Non- Maestro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>