objects/Quote/fields/Comments_for_the_Customer__c.field-meta.xml
<CustomField>
    <fullName>Comments_for_the_Customer__c</fullName>
    <label>Comments for the Customer</label>
    <type>TextArea</type>
</CustomField>