objects/Quote/fields/Coupon_Code_Entry__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code_Entry__c</fullName>
    <label>Coupon Code Entry</label>
    <length>50</length>
    <type>Text</type>
</CustomField>