objects/Quote/fields/Customer_no__c.field-meta.xml
<CustomField>
    <fullName>Customer_no__c</fullName>
    <label>Customer #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>