objects/Quote/fields/Delivery_Terms__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Terms__c</fullName>
    <label>Delivery Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FOB</fullName>
            </value>
            <value>
                <fullName>C&amp;F</fullName>
            </value>
            <value>
                <fullName>CIF</fullName>
            </value>
            <value>
                <fullName>DDP</fullName>
            </value>
            <value>
                <fullName>DDU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>