objects/Quote/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fitment</fullName>
            </value>
            <value>
                <fullName>Delivery without Liftgate</fullName>
            </value>
            <value>
                <fullName>Delivery with Liftgate</fullName>
            </value>
            <value>
                <fullName>Self - Pickup</fullName>
            </value>
            <value>
                <fullName>Door Delivery</fullName>
            </value>
            <value>
                <fullName>Store Pick Up</fullName>
            </value>
            <value>
                <fullName>Delivery Lift Gate Not Required</fullName>
                <isActive>false</isActive>
                <label>Delivery Lift Gate Not Required</label>
            </value>
            <value>
                <fullName>Delivery Lift Gate Required</fullName>
                <isActive>false</isActive>
                <label>Delivery Lift Gate Required</label>
            </value>
            <value>
                <fullName>Self-Pickup</fullName>
                <isActive>false</isActive>
                <label>Self-Pickup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>