objects/Quote/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>By Value</fullName>
            </value>
            <value>
                <fullName>By Percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>