objects/Quote/fields/Disposable_fee__c.field-meta.xml
<CustomField>
    <fullName>Disposable_fee__c</fullName>
    <label>Disposable fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>