objects/Quote/fields/Fitments_Charges__c.field-meta.xml
<CustomField>
    <fullName>Fitments_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Fitment Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>