objects/Quote/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <formula>Grand_Total_wo_Settlement__c  - Settlement_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total After Adjustment(if any)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>