objects/Quote/fields/Grand_Total_wo_Settlement__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_wo_Settlement__c</fullName>
    <formula>Total_Product_Amount__c +  Total_FET_Amount__c +  Total_State_Fee__c +  Total_Sales_Tax_Amount__c  +  Other_Charges__c +  Freight_charges__c +  Lift_Gate_Charges__c +  Shipping_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>