objects/Quote/fields/Insurance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Amount__c</fullName>
    <label>Insurance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>