objects/Quote/fields/LiftGate_Requirement__c.field-meta.xml
<CustomField>
    <fullName>LiftGate_Requirement__c</fullName>
    <label>LiftGate Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>