objects/Quote/fields/Number_of_Days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Days__c</fullName>
    <label>Number of  Pallets</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>