objects/Quote/fields/Other_Charges__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Misc. Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>