objects/Quote/fields/Payment_terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_terms__c</fullName>
    <label>Payment terms</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>CHA_Service__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>100% Advance</fullName>
            </value>
            <value>
                <fullName>30 + 70</fullName>
            </value>
            <value>
                <fullName>50 + 50</fullName>
            </value>
            <value>
                <fullName>Due on Receipt</fullName>
            </value>
            <value>
                <fullName>Advance</fullName>
                <isActive>false</isActive>
                <label>Advance</label>
            </value>
            <value>
                <fullName>Credit</fullName>
                <isActive>false</isActive>
                <label>Credit</label>
            </value>
            <value>
                <fullName>Part Payment</fullName>
                <isActive>false</isActive>
                <label>Part Payment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>