objects/Quote/fields/Pickup_Fitment_Address__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Fitment_Address__c</fullName>
    <label>Pickup/Fitment Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fontana Warehouse #38</fullName>
            </value>
            <value>
                <fullName>Fontana Warehouse #41</fullName>
            </value>
            <value>
                <fullName>Bakersfield, CA</fullName>
            </value>
            <value>
                <fullName>Jaipur</fullName>
                <isActive>false</isActive>
                <label>Jaipur</label>
            </value>
            <value>
                <fullName>Pickup Location - Delhi</fullName>
                <isActive>false</isActive>
                <label>Pickup Location - Delhi</label>
            </value>
            <value>
                <fullName>Pickup Location - Gurgaon</fullName>
                <isActive>false</isActive>
                <label>Pickup Location - Gurgaon</label>
            </value>
            <value>
                <fullName>Pickup Location - Noida</fullName>
                <isActive>false</isActive>
                <label>Pickup Location - Noida</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>