objects/Quote/fields/Pickup_Fitment_Address_New__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Fitment_Address_New__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pickup/Fitment Address</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>