objects/Quote/fields/Port_Name__c.field-meta.xml
<CustomField>
    <fullName>Port_Name__c</fullName>
    <label>Port Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Brand__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Qingdao</fullName>
            </value>
            <value>
                <fullName>Laem Chabang</fullName>
            </value>
            <value>
                <fullName>Brazil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>