objects/Quote/fields/Price_List__c.field-meta.xml
<CustomField>
    <fullName>Price_List__c</fullName>
    <label>Price List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PL1</fullName>
            </value>
            <value>
                <fullName>PL2</fullName>
            </value>
            <value>
                <fullName>PL3</fullName>
            </value>
            <value>
                <fullName>PL4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>