objects/Quote/fields/PriceBook__c.field-meta.xml
<CustomField>
    <fullName>PriceBook__c</fullName>
    <formula>Opportunity.Pricebook2.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PriceBook</label>
    <type>Text</type>
</CustomField>