objects/Quote/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <label>Product SKU</label>
    <length>20</length>
    <type>Text</type>
</CustomField>