objects/Quote/fields/Quote_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Acceptance_Date__c</fullName>
    <label>Quote Acceptance Date</label>
    <type>Date</type>
</CustomField>