objects/Quote/fields/Receiver_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Contact_Name__c</fullName>
    <label>Receiver Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>