objects/Quote/fields/Receiver_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Receiver_Contact_Number__c</fullName>
    <label>Receiver Contact Number</label>
    <type>Phone</type>
</CustomField>