objects/Quote/fields/Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Sales_Manager__c</fullName>
    <formula>Opportunity.Sales_Manager__r.FirstName +&apos; &apos; + Opportunity.Sales_Manager__r.LastName</formula>
    <label>Sales Manager</label>
    <type>Text</type>
</CustomField>