objects/Quote/fields/Settlement_Discount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Discount__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>