objects/Quote/fields/Ship_to_Address__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ship to Address</label>
    <referenceTo>Account_Adddress__c</referenceTo>
    <relationshipLabel>Quotes (Ship to Address)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>