objects/Quote/fields/Shipping_Charges__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Charges__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Shipping Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>