objects/Quote/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <formula>Opportunity.City_ShippingAddress__c</formula>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>