objects/Quote/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <formula>Opportunity.Country_ShippingAddress__c</formula>
    <label>Shipping Country</label>
    <type>Text</type>
</CustomField>