objects/Quote/fields/Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Shipping Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Shipping Name)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>