objects/Quote/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <formula>Opportunity.State_ShippingAddress__c</formula>
    <label>Shipping State</label>
    <type>Text</type>
</CustomField>