objects/Quote/fields/Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street__c</fullName>
    <formula>Opportunity.Street_Address_ShippingAddress__c</formula>
    <label>Shipping Street</label>
    <type>Text</type>
</CustomField>