objects/Quote/fields/Shipping_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip_Code__c</fullName>
    <formula>Opportunity.ZIP_Code_ShippingAddress__c</formula>
    <label>Shipping Zip Code</label>
    <type>Text</type>
</CustomField>