objects/Quote/fields/Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Terms_Conditions__c</fullName>
    <label>Terms &amp; Conditions</label>
    <type>TextArea</type>
</CustomField>