objects/Quote/fields/Total_FET_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_FET_Amount__c</fullName>
    <label>Total FET Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>