objects/Quote/fields/Total_Product_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Product_Amount__c</fullName>
    <label>Total Product Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>