objects/Quote/fields/Total_Sales_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Sales_Tax_Amount__c</fullName>
    <formula>Opportunity.Total_Sale_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>