objects/Quote/fields/Total_State_Fee__c.field-meta.xml
<CustomField>
    <fullName>Total_State_Fee__c</fullName>
    <label>Total State Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>