objects/Quote/fields/Valid_Untill__c.field-meta.xml
<CustomField>
    <fullName>Valid_Untill__c</fullName>
    <label>Valid Until</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>7Days</fullName>
                <label>7 Days</label>
            </value>
            <value>
                <fullName>15Days</fullName>
                <label>15 Days</label>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>