objects/Quote/fields/Warehouse_Location__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Location</label>
    <referenceTo>AcctSeedERP__Warehouse__c</referenceTo>
    <relationshipLabel>Quotes (Warehouse Location)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>