objects/Quote/fields/Warranty_Information__c.field-meta.xml
<CustomField>
    <fullName>Warranty_Information__c</fullName>
    <label>Warranty Information</label>
    <type>TextArea</type>
</CustomField>