objects/Quote/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <label>Weight (in lbs)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>