objects/Quote/recordTypes/B2B_Container.recordType-meta.xml
<RecordType>
    <fullName>B2B_Container</fullName>
    <active>true</active>
    <label>With FET B2B Container</label>
</RecordType>