objects/Quote/recordTypes/B2B_Quote.recordType-meta.xml
<RecordType>
    <fullName>B2B_Quote</fullName>
    <active>true</active>
    <label>B2B Quote</label>
</RecordType>