objects/Quote/recordTypes/Walk_In_Store_Pickup_Process.recordType-meta.xml
<RecordType>
    <fullName>Walk_In_Store_Pickup_Process</fullName>
    <active>true</active>
    <label>Walk In Store Pickup Process</label>
</RecordType>