objects/Quote/recordTypes/WalkIn_Door_delivery_process.recordType-meta.xml
<RecordType>
    <fullName>WalkIn_Door_delivery_process</fullName>
    <active>true</active>
    <label>WalkIn Door delivery process</label>
</RecordType>