objects/Quote/recordTypes/Without_FET_B2B_container.recordType-meta.xml
<RecordType>
    <fullName>Without_FET_B2B_container</fullName>
    <active>true</active>
    <label>Without FET B2B container</label>
</RecordType>