objects/Quote/validationRules/FitmentCharges_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>FitmentCharges_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;B2B_Quote&quot;,AND(
 Fitments_Charges__c &gt; 0,
NOT(ISPICKVAL( Delivery_Type__c ,&apos;Fitment&apos;))
))</errorConditionFormula>
    <errorDisplayField>Fitments_Charges__c</errorDisplayField>
    <errorMessage>Fitment Charges are only applicable for Fitment quotes</errorMessage>
</ValidationRule>