objects/Quote/validationRules/Is_Delivery_term_Field_CIF.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_Delivery_term_Field_CIF</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Delivery_Terms__c , &quot;CIF&quot;) , OR (ISBLANK(   Freight_charges__c  ) , ISBLANK( Insurance_Amount__c ) ))</errorConditionFormula>
    <errorMessage>IF Delivery Terms is CIF then Freight and Insurance Amount is mandatory</errorMessage>
</ValidationRule>