objects/Quote/validationRules/LiftGateCharges_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>LiftGateCharges_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( RecordType.DeveloperName = &quot;B2B_Quote&quot;,AND(
  Lift_Gate_Charges__c  &gt; 0,
NOT(ISPICKVAL( Delivery_Type__c ,&apos;Delivery with Liftgate&apos;))
))</errorConditionFormula>
    <errorDisplayField>Lift_Gate_Charges__c</errorDisplayField>
    <errorMessage>LiftGate Charges are only applicable for quotes where delivery type is &apos;Delivery with Liftgate&apos;</errorMessage>
</ValidationRule>