objects/Quote/validationRules/PaymentTermsRule.validationRule-meta.xml
<ValidationRule>
    <fullName>PaymentTermsRule</fullName>
    <active>false</active>
    <errorConditionFormula>AND(ISPICKVAL( Payment_terms__c , &quot;Credit&quot;), ISBLANK(  Number_of_Days__c ) )</errorConditionFormula>
    <errorDisplayField>Number_of_Days__c</errorDisplayField>
    <errorMessage>Please enter Number of Pallets</errorMessage>
</ValidationRule>