objects/Quote/validationRules/Quote_Acceptance_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Acceptance_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status , &quot;Accepted&quot;) , ISBLANK( Quote_Acceptance_Date__c ) )</errorConditionFormula>
    <errorDisplayField>Quote_Acceptance_Date__c</errorDisplayField>
    <errorMessage>When Quote is moved to Closed Won Then Add Quote Acceptance Date</errorMessage>
</ValidationRule>