objects/Quote/validationRules/Quote_Accepted_and_Syncing_True.validationRule-meta.xml
<ValidationRule>
    <fullName>Quote_Accepted_and_Syncing_True</fullName>
    <active>true</active>
    <description>Quote will be accepted only if syncing is true</description>
    <errorConditionFormula>AND(ISPICKVAL( Status , &quot;Accepted&quot;), NOT(IsSyncing = True))</errorConditionFormula>
    <errorDisplayField>IsSyncing</errorDisplayField>
    <errorMessage>Please sync or unsync the quote then proceed further.</errorMessage>
</ValidationRule>