objects/Quote/validationRules/When_Status_is_Draft_Syncing_is_False.validationRule-meta.xml
<ValidationRule>
    <fullName>When_Status_is_Draft_Syncing_is_False</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Status , &quot;Draft&quot;) ,  IsSyncing = TRUE)</errorConditionFormula>
    <errorDisplayField>IsSyncing</errorDisplayField>
    <errorMessage>Quote Can&apos;t be sync on Draft Status</errorMessage>
</ValidationRule>